--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -3,7 +3,7 @@
   background-color: var(--background-btn-color);
 }
 
-.team-title {
+.team__title {
   font-family: var(--primary-font);
   font-style: normal;
   font-weight: 700;
@@ -13,30 +13,28 @@
   letter-spacing: 0.03em;
   color: var(--primaru-text-color);
   margin-bottom: 50px;
-  padding-top: 94px;
 }
 
-.team-list {
+.team__list {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
   column-gap: 30px;
   padding-bottom: 90px;
 }
-.team-card {
+.team__card {
   padding-bottom: 30px;
   background-color: var(--accent-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-/* .team-photo {
-  margin-bottom: 50px; */
-.team-text {
+
+.team__text {
   padding-top: 50px;
 }
 
-.team-item-title {
+.team__name {
   font-family: var(--primary-font);
   font-style: normal;
   font-weight: 500;
@@ -47,7 +45,8 @@
   color: var(--primaru-text-color);
   margin-bottom: 10px;
 }
-.team-title-description {
+
+.team__description {
   font-family: var(--primary-font);
   font-style: normal;
   font-weight: 400;
@@ -57,18 +56,18 @@
   letter-spacing: 0.03em;
   color: var(--additional-text-color);
 }
-.icon-list {
+.social__list {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 206px;
   height: 44px;
   margin: 0 auto;
-  padding-top: 16px;
+  margin-top: 16px;
   column-gap: 10px;
 }
 
-.social-list-item-link {
+.social__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -79,9 +78,14 @@
   transition-property: color, background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
 
-.team-social-icon {
+.social__icon {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
@@ -89,14 +93,9 @@
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.social-list-item-link:hover,
-.social-list-item-link:focus {
-  background-color: var(--accent-color);
-}
-
-.social-list-item-link:hover .team-social-icon,
-.social-list-item-link:focus .team-social-icon {
-  fill: var(--accent-text-color);
+  .social__link:hover &,
+  .social__link:focus & {
+    fill: var(--accent-text-color);
+  }
 }
