--- a/css/main.css
+++ b/css/main.css
@@ -849,7 +849,7 @@ button {
   fill: var(--accent-color);
 }
 
-.menu-list {
+.menu__list {
   display: flex;
   list-style: none;
   column-gap: 8px;
@@ -857,7 +857,7 @@ button {
   margin-bottom: 50px;
 }
 
-.menu-btn {
+.menu__btn {
   font-family: var(--primary-font);
   font-style: normal;
   font-weight: 500;
@@ -870,19 +870,18 @@ button {
   background-color: var(--background-btn-color);
 }
 
-.menu-btn:hover,
-.menu-btn:focus {
+.menu__btn:hover, .menu__btn:focus {
   color: var(--accent-text-color);
   background-color: var(--accent-color);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-text {
+.portfolio__text {
   border: #eeeeee 1px solid;
   border-top: none;
 }
 
-.portfolio-list {
+.portfolio__list {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
@@ -890,18 +889,17 @@ button {
   row-gap: 30px;
 }
 
-.portfolio-link {
+.portfolio__link {
   display: block;
 }
 
-.portfolio-link:hover,
-.portfolio-link:focus {
+.portfolio__link:hover, .portfolio__link:focus {
   background: #ffffff;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   transform: translateY(0%);
 }
 
-.portfolio-thumb {
+.portfolio__thumb {
   display: inline-block;
   content: "";
   position: relative;
@@ -918,7 +916,12 @@ button {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-overlay-text {
+.portfolio__link :hover .portfolio-overlay,
+.portfolio__link :focus .portfolio-overlay {
+  transform: translateY(0%);
+}
+
+.portfolio-overlay__text {
   background-color: rgba(33, 150, 243, 0.9);
   font-family: var(--primary-font);
   font-style: normal;
@@ -930,12 +933,7 @@ button {
   padding: 63px 24px;
 }
 
-.portfolio-link :hover .portfolio-overlay,
-.portfolio-link :focus .portfolio-overlay {
-  transform: translateY(0%);
-}
-
-.portfolio-item-title {
+.portfolio__title {
   font-family: var(--primary-font);
   font-style: normal;
   font-weight: 700;
@@ -948,7 +946,7 @@ button {
   padding-left: 24px;
 }
 
-.portfolio-item-description {
+.portfolio__description {
   font-family: var(--primary-font);
   font-style: normal;
   font-weight: 400;
