--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,11 +1,11 @@
-.menu-list {
+.menu__list {
   display: flex;
   list-style: none;
   column-gap: 8px;
   justify-content: center;
   margin-bottom: 50px;
 }
-.menu-btn {
+.menu__btn {
   font-family: var(--primary-font);
   font-style: normal;
   font-weight: 500;
@@ -17,20 +17,22 @@
 
   color: var(--primaru-text-color);
   background-color: var(--background-btn-color);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-text-color);
+    background-color: var(--accent-color);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
-.menu-btn:hover,
-.menu-btn:focus {
-  color: var(--accent-text-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.portfolio-text {
+
+.portfolio__text {
   border: #eeeeee 1px solid;
   border-top: none;
 }
 
-.portfolio-list {
+.portfolio__list {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
@@ -38,19 +40,19 @@
   row-gap: 30px;
 }
 
-.portfolio-link {
+.portfolio__link {
   display: block;
+
+  &:hover,
+  &:focus {
+    background: #ffffff;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+    transform: translateY(0%);
+  }
 }
 
-.portfolio-link:hover,
-.portfolio-link:focus {
-  background: #ffffff;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-  transform: translateY(0%);
-}
-
-.portfolio-thumb {
+.portfolio__thumb {
   display: inline-block;
   content: "";
   position: relative;
@@ -65,9 +67,14 @@
   left: 0;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .portfolio__link :hover &,
+  .portfolio__link :focus & {
+    transform: translateY(0%);
+  }
 }
 
-.portfolio-overlay-text {
+.portfolio-overlay__text {
   background-color: rgba(33, 150, 243, 0.9);
   font-family: var(--primary-font);
   font-style: normal;
@@ -79,12 +86,7 @@
   padding: 63px 24px;
 }
 
-.portfolio-link :hover .portfolio-overlay,
-.portfolio-link :focus .portfolio-overlay {
-  transform: translateY(0%);
-}
-
-.portfolio-item-title {
+.portfolio__title {
   font-family: var(--primary-font);
   font-style: normal;
   font-weight: 700;
@@ -97,7 +99,7 @@
   padding-left: 24px;
 }
 
-.portfolio-item-description {
+.portfolio__description {
   font-family: var(--primary-font);
   font-style: normal;
   font-weight: 400;
