Намагався додати міксін, видає помилку

--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -47,6 +47,7 @@
 .features__item_title {
   font-family: var(--primary-font);
   font-style: normal;
+  @include font(14px, 700, 16px);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
