--- a/css/main.css
+++ b/css/main.css
@@ -380,21 +380,16 @@ button {
   height: 80px;
 }
 
-.page-nav {
+.nav {
   display: flex;
   align-items: center;
   column-gap: 90px;
 }
 
-.page-nav__list {
+.nav__list {
   display: flex;
   column-gap: 50px;
   padding-top: 32px;
-}
-
-.contact-mail {
-  margin-left: auto;
-  margin-right: 50px;
 }
 
 .logo {
@@ -425,7 +420,7 @@ button {
   line-height: 31px;
 }
 
-.page-nav__link {
+.nav__list-link {
   display: block;
   font-family: var(--primary-font);
   font-style: normal;
@@ -439,7 +434,7 @@ button {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.page-nav__link:hover, .page-nav__link:focus {
+.nav__list-link:hover, .nav__list-link:focus {
   font-family: var(--primary-font);
   font-style: normal;
   font-weight: 500;
@@ -449,11 +444,11 @@ button {
   color: var(--accent-color);
 }
 
-.page-nav__link_current {
+.nav__list-link--current {
   color: var(--accent-color);
 }
 
-.page-nav__link_current::after {
+.nav__list-link--current::after {
   display: block;
   content: "";
   width: 100%;
@@ -527,9 +522,9 @@ button {
 .hero__title {
   font-family: var(--primary-font);
   font-style: normal;
-  font-weight: 900;
   font-size: 44px;
-  line-height: 1.36;
+  font-weight: 900;
+  line-height: 1.36364;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--accent-text-color);
@@ -577,7 +572,12 @@ button {
   display: block;
 }
 
-.features__icon_item {
+.features__icon {
+  width: 70px;
+  height: 70px;
+}
+
+.features__icon--item {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -585,11 +585,6 @@ button {
   height: 120px;
   background-color: var(--background-btn-color);
   border-radius: 4px;
-}
-
-.features__icon {
-  width: 70px;
-  height: 70px;
 }
 
 .features__title {
@@ -617,9 +612,12 @@ button {
   flex-basis: calc((100% - 3 * 30px) / 4);
 }
 
-.features__item_title {
+.features__item--title {
   font-family: var(--primary-font);
   font-style: normal;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.14286;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -630,7 +628,7 @@ button {
   padding-top: 30px;
 }
 
-.features__item_text {
+.features__item--text {
   font-family: var(--primary-font);
   font-style: normal;
   font-weight: 400;
@@ -711,7 +709,7 @@ button {
   margin-bottom: 50px;
 }
 
-.team__list {
+.team-list {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
@@ -719,18 +717,18 @@ button {
   padding-bottom: 90px;
 }
 
-.team__card {
+.team-list__card {
   padding-bottom: 30px;
   background-color: var(--accent-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team__text {
+.team-list__text {
   padding-top: 50px;
 }
 
-.team__name {
+.team-list__name {
   font-family: var(--primary-font);
   font-style: normal;
   font-weight: 500;
@@ -742,7 +740,7 @@ button {
   margin-bottom: 10px;
 }
 
-.team__description {
+.team-list__description {
   font-family: var(--primary-font);
   font-style: normal;
   font-weight: 400;
@@ -753,7 +751,7 @@ button {
   color: var(--additional-text-color);
 }
 
-.social__list {
+.social-list {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -764,7 +762,7 @@ button {
   column-gap: 10px;
 }
 
-.social__link {
+.social-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -776,11 +774,11 @@ button {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social__link:hover, .social__link:focus {
+.social-list__link:hover, .social-list__link:focus {
   background-color: var(--accent-color);
 }
 
-.social__icon {
+.social-list__icon {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
@@ -789,8 +787,8 @@ button {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social__link:hover .social__icon,
-.social__link:focus .social__icon {
+.social-list__link:hover .social-list__icon,
+.social-list__link:focus .social-list__icon {
   fill: var(--accent-text-color);
 }
 
