--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -6,18 +6,19 @@
   display: block;
 }
 
-.features__icon_item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 270px;
-  height: 120px;
-  background-color: var(--background-btn-color);
-  border-radius: 4px;
-}
 .features__icon {
   width: 70px;
   height: 70px;
+
+  &--item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 270px;
+    height: 120px;
+    background-color: var(--background-btn-color);
+    border-radius: 4px;
+  }
 }
 
 .features__title {
@@ -43,26 +44,28 @@
 
 .features__item {
   flex-basis: calc((100% - 3 * 30px) / 4);
-}
-.features__item_title {
-  font-family: var(--primary-font);
-  font-style: normal;
-  @include font(14px, 700, 16px);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--primaru-text-color);
-  padding-bottom: 10px;
-  padding-top: 30px;
-}
-.features__item_text {
-  font-family: var(--primary-font);
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--additional-text-color);
+
+  &--title {
+    font-family: var(--primary-font);
+    font-style: normal;
+    @include font(14px, 700, 16px);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--primaru-text-color);
+    padding-bottom: 10px;
+    padding-top: 30px;
+  }
+
+  &--text {
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--additional-text-color);
+  }
 }
