--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,21 +8,18 @@
   height: 80px;
 }
 
-.page-nav {
+.nav {
   display: flex;
   align-items: center;
   column-gap: 90px;
 }
-.page-nav__list {
+
+.nav__list {
   display: flex;
   column-gap: 50px;
   padding-top: 32px;
 }
 
-.contact-mail {
-  margin-left: auto;
-  margin-right: 50px;
-}
 .logo {
   width: 145px;
   height: 31px;
@@ -37,23 +34,23 @@
   line-height: 31px;
   color: var(--logo-color);
   text-decoration: none;
+
+  &__first-part {
+    color: var(--accent-color);
+    width: 145px;
+    height: 31px;
+    left: 215px;
+    top: 24px;
+
+    font-family: var(--secondary-font);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+  }
 }
 
-.logo__first-part {
-  color: var(--accent-color);
-  width: 145px;
-  height: 31px;
-  left: 215px;
-  top: 24px;
-
-  font-family: var(--secondary-font);
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 31px;
-}
-
-.page-nav__link {
+.nav__list-link {
   display: block;
   font-family: var(--primary-font);
   font-style: normal;
@@ -79,7 +76,7 @@
   }
 }
 
-.page-nav__link_current {
+.nav__list-link--current {
   color: var(--accent-color);
 
   &::after {
